<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:columnCount="4"
    android:rowCount="7">

    <!--<Button
        android:id="@+id/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:text="@string/title_activity_about"
        />-->

    <!-- <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"
        android:background="@drawable/icon_settings"
        /> -->

    <!-- <Button
        android:id="@+id/button_panic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:text="@string/panic"
        /> -->

    <!-- <Button
        android:id="@+id/button_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:text="@string/alert"
        /> -->

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/button_talk_to_me"
            android:textSize="@dimen/font_size_normal"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableTop="@drawable/icon_alert"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel_alert"
            android:textSize="@dimen/font_size_normal"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableTop="@drawable/icon_cancel"
            android:gravity="center"
            android:text="@string/button_safe"
            android:visibility="gone" />

        <TextView
            android:id="@+id/button_panic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableTop="@drawable/icon_panic"
            android:gravity="center"
            android:text="@string/button_call_my_friends"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cancel_panic"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/font_size_normal"
            android:layout_weight="1"
            android:drawablePadding="@dimen/padding_normal"
            android:drawableTop="@drawable/icon_cancel"
            android:gravity="center"
            android:text="@string/button_safe"
            android:visibility="gone" />
    </LinearLayout>

        <ImageView
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_settings"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_info"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>


</RelativeLayout>
